--- a/templates/rule.html
+++ b/templates/rule.html
@@ -38,10 +38,10 @@
         <option value="rewrite-url">Rewrite URL</option>
       </select>
       <div class="form-group" id="action-wrapper" style="display: none;">
-        <br>
+        <!-- <br>
         <input type="text" class="form-control" placeholder="Source pattern" name="source-pattern">
         <br>
-        <input type="text" class="form-control" placeholder="Destination" name="destination">
+        <input type="text" class="form-control" placeholder="Destination" name="destination"> -->
       </div>
       <br>
       <div class="text-end">
