--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,10 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/rule/">Rule</a>
-          </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/setting/">Setting</a>
+            </li>
            {% endif %}
         </ul>
         <ul class="navbar-nav">
