--- a/templates/setting.html
+++ b/templates/setting.html
@@ -9,6 +9,19 @@
 <body>
   {% include 'navbar.html' %}
   <div class="container">
+    <br>
+    <br>
+    <h1>Setting</h1>
+
+    <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
+      <p>{{ domain.domain }}</p>
+      <form action="/delete/" method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary">Xoá domain</button>
+        <input type="hidden" name="domain" value={{domain.domain}}>
+       </form>
+    </div>
+    
     <div class="form-check form-switch">
         <input class="form-check-input" type="checkbox" id="toggleSwitch">
         <label class="form-check-label" for="toggleSwitch">Toggle Switch</label>
