--- a/templates/setting.html
+++ b/templates/setting.html
@@ -17,12 +17,14 @@
       <p>{{ domain.domain }}</p>
       <form action="/delete/" method="post">
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary">Xoá domain</button>
-        <input type="hidden" name="domain" value={{domain.domain}}>
+        <h2>Cache key</h2>
         <div class="form-check form-switch">
+          <label class="form-check-label" for="toggleSwitch">Cache query string</label>
           <input class="form-check-input" type="checkbox" id="toggleSwitch">
-          <label class="form-check-label" for="toggleSwitch">Toggle Switch</label>
-      </div>
+        </div>
+        <div class="text-end">
+          <button type="submit" class="btn btn-primary">Tạo rule</button>
+        </div>
        </form>
     </div>
     
