--- a/templates/setting.html
+++ b/templates/setting.html
@@ -12,10 +12,11 @@
     <br>
     <br>
     <h1>Setting</h1>
+    <br>
+    
 
     <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
-      <p>{{ domain.domain }}</p>
-      <form action="/delete/" method="post">
+      <form action="/setting/" method="post">
         {% csrf_token %}
         <h2>Cache key</h2>
         <div class="form-check form-switch">
@@ -23,7 +24,7 @@
           <input class="form-check-input" type="checkbox" id="toggleSwitch">
         </div>
         <div class="text-end">
-          <button type="submit" class="btn btn-primary">Tạo rule</button>
+          <button type="submit" class="btn btn-primary">Lưu</button>
         </div>
        </form>
     </div>
