--- a/templates/setting.html
+++ b/templates/setting.html
@@ -13,7 +13,7 @@
     <br>
     <h1>Setting</h1>
     <br>
-    
+
 
     <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
       <form action="/setting/" method="post">
@@ -21,7 +21,7 @@
         <h2>Cache key</h2>
         <div class="form-check form-switch">
           <label class="form-check-label" for="toggleSwitch">Cache query string</label>
-          <input class="form-check-input" type="checkbox" id="toggleSwitch">
+          <input class="form-check-input" type="checkbox" id="toggleSwitch" name="querystring-cache-key">
         </div>
         <div class="text-end">
           <button type="submit" class="btn btn-primary">Lưu</button>
