--- a/templates/index.html
+++ b/templates/index.html
@@ -6,40 +6,45 @@
   <title>Homepage</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+<body>
 
-{% include 'navbar.html' %}
+  {% include 'navbar.html' %}
 
-
-<section style="background: url(/hero.jpeg); background-size: cover; background-position: center center" class="hero">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-            <br><br><br><br>
-          <h1 style="color: white; text-align: center;">Sapphire CDN </h1><br><br><br><br><br><br><br><br>
-        </div>
-      
+  <section style="background: url(/hero.jpeg); background-size: cover; background-position: center center" class="hero">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+              <br><br><br><br>
+            <h1 style="color: white; text-align: center;">Sapphire CDN </h1><br><br><br><br><br><br><br><br>
+          </div>
+        
+      </div>
     </div>
-  </div></section>
+  </section>
   
+  {% load static %}
+  <br>
+  <br>
+  <br>
+  <div class="container">
+    {% if domains %}
+      <h2>Domain đã khởi tạo</h2>
+      {% for domain in domains %}
+      <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
+          <p>{{ domain.domain }}</p>
+          <form action="/delete/" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-primary">Xoá domain</button>
+            <input type="hidden" name="domain" value={{domain.domain}}>
+          </form>
+      </div>
+      {% empty %}
+        <p>No items found.</p>
+      {% endfor %}
+  {% else %}
+      <h2>Bạn chưa khởi tạo domain nào. Hãy khởi tạo ngay</h2>
+  {% endif %}
+  </div>
 
-{% load static %}
-<br>
-<br>
-<br>
-{% if domains %}
-    <h2>Domain đã khởi tạo</h2>
-    {% for domain in domains %}
-    <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
-        <p>{{ domain.domain }}</p>
-        <form action="/delete/" method="post">
-          {% csrf_token %}
-          <button type="submit" class="btn btn-primary">Xoá domain</button>
-          <input type="hidden" name="domain" value={{domain.domain}}>
-         </form>
-    </div>
-    {% empty %}
-      <p>No items found.</p>
-    {% endfor %}
-{% else %}
-    <h2>Bạn chưa khởi tạo domain nào. Hãy khởi tạo ngay</h2>
-{% endif %}
+</body>
+
