--- a/templates/setting.html
+++ b/templates/setting.html
@@ -19,10 +19,19 @@
       <form action="/setting/" method="post">
         {% csrf_token %}
         <h2>Cache key</h2>
+
         <div class="form-check form-switch">
           <label class="form-check-label" for="toggleSwitch">Cache query string</label>
-          <input class="form-check-input" type="checkbox" id="toggleSwitch" name="querystring-cache-key">
+          <input class="form-check-input" type="checkbox" name="querystring-cache-key">
         </div>
+
+        <br>
+
+        <div class="form-check form-switch">
+          <label class="form-check-label" for="toggleSwitch"> Device </label>
+          <input class="form-check-input" type="checkbox" name="device-cache-key">
+        </div>
+        <br>
         <div class="text-end">
           <button type="submit" class="btn btn-primary">Lưu</button>
         </div>
