--- a/templates/setting.html
+++ b/templates/setting.html
@@ -49,11 +49,15 @@
       const textBoxWrapper = document.getElementById("text-box-wrapper")
       const cookieBox = document.getElementById("cookie-cache-key")
       cookieBox.addEventListener("change", () => {
-        
-        var cookieCacheKeyInstructText = document.createElement("h2")
+
+
+        var cookieCacheKeyInstructText = document.createElement("h3")
         cookieCacheKeyInstructText.textContent = "Những giá trị điền vào sẽ dùng làm một phần của cache key."
         textBoxWrapper.appendChild(cookieCacheKeyInstructText)
-    
+        var cookieCacheKeyInputBox = document.createElement("input")
+        cookieCacheKeyInputBox.setAttribute("type", "text")
+        cookieCacheKeyInputBox.setAttribute("placeholder", "Danh sách cookie")  
+        cookieCacheKeyInputBox.setAttribute("name", "cookie-cache-key-list")
       })
 
     </script>
