--- a/templates/setting.html
+++ b/templates/setting.html
@@ -58,6 +58,7 @@
         cookieCacheKeyInputBox.setAttribute("type", "text")
         cookieCacheKeyInputBox.setAttribute("placeholder", "Danh sách cookie")  
         cookieCacheKeyInputBox.setAttribute("name", "cookie-cache-key-list")
+        textBoxWrapper.appendChild(cookieCacheKeyInputBox)
       })
 
     </script>
