--- a/templates/setting.html
+++ b/templates/setting.html
@@ -48,18 +48,34 @@
     <script>
       const textBoxWrapper = document.getElementById("text-box-wrapper")
       const cookieCheckBox = document.getElementById("cookie-cache-key")
+
+      // Tạo input box khi check cookie 
       cookieCheckBox.addEventListener("change", () => {
         if (cookieCheckBox.checked) {
           textBoxWrapper.appendChild(document.createElement("br"))
           var cookieCacheKeyInstructText = document.createElement("h5")
           cookieCacheKeyInstructText.textContent = "Những giá trị điền vào sẽ dùng làm một phần của cache key."
           textBoxWrapper.appendChild(cookieCacheKeyInstructText)
+
+          // Cookie list input
           var cookieCacheKeyInputBox = document.createElement("input")
           cookieCacheKeyInputBox.setAttribute("type", "text")
           cookieCacheKeyInputBox.setAttribute("placeholder", "Danh sách cookie")  
           cookieCacheKeyInputBox.setAttribute("name", "cookie-cache-key-list")
           cookieCacheKeyInputBox.classList.add("form-control")
           textBoxWrapper.appendChild(cookieCacheKeyInputBox)
+
+          // Cookie name wrapper
+          var cookieNameWrapper = document.createElement("div")
+          cookieNameWrapper.classList.add("col-md-4")
+          textBoxWrapper.appendChild(cookieNameWrapper)
+
+          var cookieNameInput = document.createElement("input")
+          cookieNameInput.setAttribute("type", "text")
+          cookieNameInput.setAttribute("placeholder", "Tên cookie")
+          cookieNameInput.classList.add("form-control")
+          cookieNameWrapper.appendChild(cookieNameInput)
+
         }
         else {
           textBoxWrapper.innerHTML = ""
