--- a/templates/setting.html
+++ b/templates/setting.html
@@ -72,7 +72,7 @@
           textBoxWrapper.appendChild(cookieValueInstructText)
 
           // Cookie list input
-          var cookieValueBox = document.createElement("input")
+          var cookieValueInputBox = document.createElement("input")
           cookieValueInputBox.setAttribute("type", "text")
           cookieValueInputBox.setAttribute("placeholder", " Danh sách giá trị của cookie")  
           cookieValueInputBox.setAttribute("name", "cookie-value-list")
