--- a/templates/setting.html
+++ b/templates/setting.html
@@ -85,6 +85,7 @@
           // add cookie button
           var addCookieButton = document.createElement("button")
           addCookieButton.classList.add("btn btn-primary")
+          addCookieButton.textContent = "Thêm cookie"
           textBoxWrapper.appendChild(addCookieButton)
 
         }
