--- a/templates/setting.html
+++ b/templates/setting.html
@@ -84,6 +84,7 @@
 
           // add cookie button
           var addCookieButton = document.createElement("button")
+          addCookieButton.setAttribute("type", "button")
           addCookieButton.classList.add("btn btn-primary")
           addCookieButton.textContent = "Thêm cookie"
           textBoxWrapper.appendChild(addCookieButton)
