--- a/templates/setting.html
+++ b/templates/setting.html
@@ -86,6 +86,7 @@
           var addCookieButton = document.createElement("button")
           addCookieButton.setAttribute("type", "button")
           addCookieButton.classList.add("btn-primary")
+          addCookieButton.classList.add("btn")
           addCookieButton.textContent = "Thêm cookie"
           textBoxWrapper.appendChild(addCookieButton)
 
