--- a/templates/setting.html
+++ b/templates/setting.html
@@ -82,6 +82,8 @@
           cookieValueInputBox.classList.add("form-control")
           textBoxWrapper.appendChild(cookieValueInputBox)
 
+          textBoxWrapper.appendChild(document.createElement("br"))
+
           // add cookie button
           var addCookieButton = document.createElement("button")
           addCookieButton.setAttribute("type", "button")
