--- a/templates/setting.html
+++ b/templates/setting.html
@@ -76,7 +76,7 @@
           cookieNameInput.classList.add("form-control")
           cookieNameWrapper.appendChild(cookieNameInput)
 
-          textBoxWrapper.appendChild(document.createElement("br"))
+          cookieWrapper.appendChild(document.createElement("br"))
 
           // Cookie list input
           var cookieValueInputBox = document.createElement("input")
