--- a/templates/setting.html
+++ b/templates/setting.html
@@ -94,6 +94,12 @@
           addCookieButton.classList.add("btn")
           addCookieButton.classList.add("btn-primary")
           addCookieButton.textContent = "Thêm cookie"
+          addCookieButton.addEventListener("onclick", () => {
+            var foo = document.createElement("h5")
+            foo.textContent = "hello"
+            textBoxWrapper.appendChild(foo)
+
+          })
           textBoxWrapper.appendChild(addCookieButton)
 
         }
