--- a/templates/setting.html
+++ b/templates/setting.html
@@ -94,7 +94,7 @@
           addCookieButton.classList.add("btn")
           addCookieButton.classList.add("btn-primary")
           addCookieButton.textContent = "Thêm cookie"
-          addCookieButton.addEventListener("onclick", () => {
+          addCookieButton.addEventListener("click", () => {
             var foo = document.createElement("h5")
             foo.textContent = "hello"
             textBoxWrapper.appendChild(foo)
