--- a/templates/setting.html
+++ b/templates/setting.html
@@ -95,32 +95,8 @@
 
           textBoxWrapper.appendChild(document.createElement("br"))
 
-          var cookieWrapper = document.createElement("div")
-          cookieWrapper.setAttribute("style", "border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;")
-          textBoxWrapper.appendChild(cookieWrapper)
-          
-          // Cookie name wrapper
-          var cookieNameWrapper = document.createElement("div")
-          cookieNameWrapper.classList.add("col-md-4")
-          cookieWrapper.appendChild(cookieNameWrapper)
 
-          var cookieNameInput = document.createElement("input")
-          cookieNameInput.setAttribute("type", "text")
-          cookieNameInput.setAttribute("placeholder", "Tên cookie")
-          cookieNameInput.classList.add("form-control")
-          cookieNameWrapper.appendChild(cookieNameInput)
-
-          cookieWrapper.appendChild(document.createElement("br"))
-
-          // Cookie list input
-          var cookieValueInputBox = document.createElement("input")
-          cookieValueInputBox.setAttribute("type", "text")
-          cookieValueInputBox.setAttribute("placeholder", " Danh sách giá trị của cookie. Cách nhau bởi dấu phẩy")  
-          cookieValueInputBox.setAttribute("name", "cookie-value-list")
-          cookieValueInputBox.classList.add("form-control")
-          cookieWrapper.appendChild(cookieValueInputBox)
-
-          textBoxWrapper.appendChild(document.createElement("br"))
+          textBoxWrapper.appendChild(createCookieWrapper())
 
           // add cookie button
           var addCookieButton = document.createElement("button")
