--- a/templates/index.html
+++ b/templates/index.html
@@ -9,18 +9,7 @@
 <body>
 
   {% include 'navbar.html' %}
-
-  <section style="background: url(/hero.jpeg); background-size: cover; background-position: center center" class="hero">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-              <br><br><br><br>
-            <h1 style="color: white; text-align: center;">Sapphire CDN </h1><br><br><br><br><br><br><br><br>
-          </div>
-        
-      </div>
-    </div>
-  </section>
+  {% include 'hero.html'%}
   
   {% load static %}
   <br>
