--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       <h2>Domain đã khởi tạo</h2>
       {% for domain in domains %}
       <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
-          <p>{{ domain.domain }}</p>
+          <p>{{ domain }}</p>
           <p>Tổng data transfer là: 100 GB</p>
           <form action="/delete/" method="post">
             {% csrf_token %}
