--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
           <form action="/delete/" method="post">
             {% csrf_token %}
             <button type="submit" class="btn btn-primary">Xoá domain</button>
-            <input type="hidden" name="domain" value={{domain.domain}}>
+            <input type="hidden" name="domain" value={{domain}}>
           </form>
       </div>
       {% empty %}
