--- a/templates/index.html
+++ b/templates/index.html
@@ -21,12 +21,12 @@
       <h2>Domain đã khởi tạo</h2>
       {% for domain in domains %}
       <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
-          <p>{{ domain }}</p>
+          <p>{{ domain.name }}</p>
           <p>Tổng data transfer là: {{ domain.total_bytes_sent }}</p>
           <form action="/delete/" method="post">
             {% csrf_token %}
             <button type="submit" class="btn btn-primary">Xoá domain</button>
-            <input type="hidden" name="domain" value={{domain}}>
+            <input type="hidden" name="domain" value={{domain.name}}>
           </form>
       </div>
       {% empty %}
