--- a/templates/setting.html
+++ b/templates/setting.html
@@ -30,12 +30,12 @@
           <input class="form-check-input" type="checkbox" name="device-cache-key">
         </div>
         <br>
-        <div class="form-check form-switch">
+        <!-- <div class="form-check form-switch">
           <label class="form-check-label" for="toggleSwitch"> Cookie cache key </label>
           <input class="form-check-input" type="checkbox" name="cookie-cache-key" id="cookie-cache-key">
-        </div>
+        </div> -->
         <br>
-        <div id="text-box-wrapper">
+        <!-- <div id="text-box-wrapper"> -->
 
         </div>
         <br>
