--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/setting/">Setting</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/cache-delete/">Cache Delete</a>
+            </li>
            {% endif %}
         </ul>
         <ul class="navbar-nav">
