--- a/templates/cache_delete.html
+++ b/templates/cache_delete.html
@@ -18,7 +18,7 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Nhập vào đường dẫn các file cache cần xoá</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="form-control" rows="3" name="delete-link-list"></textarea>
             </div>
             <br>
             <div class="text-end">
