--- a/templates/hero.html
+++ b/templates/hero.html
@@ -1,4 +1,5 @@
-<section style="background: url(/hero.jpeg); background-size: cover; background-position: center center" class="hero">
+{% load static %}
+<section style="background: url({% static 'hero.jpeg' %}); background-size: cover; background-position: center center" class="hero">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
